@@ -1,5 +1,7 @@
 * Added -f/--force option to muninn-ingest.
 
+* Improved formatting of duration in muninn-search summary output.
+
 4.1 2017-11-16
 ~~~~~~~~~~~~~~
 
